Fixing screen overflow bug

--- a/app/stylesheets/periodicQuotation.css
+++ b/app/stylesheets/periodicQuotation.css
@@ -3,7 +3,6 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
-    overflow-y: hidden;
 }
 
 @media screen and (max-width: 480px) {
